# Skyzone-X4-Pro-Firmware-Editor

./: .gitignore  CMakeLists.txt  README.md  build.py  imgui.lib  skyzone_editor.py  skyzone_editor_imgui.ini
src/: annotations.cpp  annotations.h  decompile.cpp  decompile.h  disasm.cpp  disasm.h  firmware.cpp  firmware.h  firmware_a.cpp  firmware_a.h  main.cpp  ui_disasm.cpp  ui_editor.cpp
tools/: skyzone_editor.py
